WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30106
Cleanup MediaPlayer and MediaPlayerPrivateInterface to remove dead methods
https://bugs.webkit.org/show_bug.cgi?id=30106
Summary
Cleanup MediaPlayer and MediaPlayerPrivateInterface to remove dead methods
Hin-Chung Lam
Reported
2009-10-05 21:40:49 PDT
MediaPlayer and MediaPlayerPrivateInterface has some dead methods that are unrelated to the spec: setRate(float) float dataRate() setEndTime(float) etc.. These classes need to be cleaned up to match the spec.
Attachments
Proposed patch
(15.06 KB, patch)
2010-01-20 16:46 PST
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2010-01-20 16:46:18 PST
Created
attachment 47077
[details]
Proposed patch
Eric Carlson
Comment 2
2010-01-21 08:21:03 PST
http://trac.webkit.org/changeset/53625
Csaba Osztrogonác
Comment 3
2010-01-21 10:49:50 PST
This patch broke Qt build, because it removed totalBytesKnown(), but WebCore/platform/qt/RenderThemeQt.cpp used it. totalBytesKnown() always returned false, so it was really unreachable code, but it can be useful in the future. error message: (
http://build.webkit.org/builders/Qt%20Linux%20Release/builds/6325/steps/compile-webkit/logs/stdio
) /../../WebCore/platform/qt/RenderThemeQt.cpp:983: error: 'class WebCore::MediaPlayer' has no member named 'totalBytesKnown' ../../../WebCore/platform/qt/RenderThemeQt.cpp:984: error: 'class WebCore::MediaPlayer' has no member named 'totalBytes' I committed a buildfix into
http://trac.webkit.org/changeset/53632
, but I'm not sure if we really want to remove this code introduced in
http://trac.webkit.org/changeset/34300
. Simon? Tor Arne?
Eric Carlson
Comment 4
2010-01-21 11:23:07 PST
Filed
https://bugs.webkit.org/show_bug.cgi?id=33960
to restore totalBytesKnown and totalBytes methods.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug