[Qt] Unreviewed buildfix after r53625.

Cleanup MediaPlayer and MediaPlayerPrivateInterface to remove dead methods
https://bugs.webkit.org/show_bug.cgi?id=30106

* platform/qt/RenderThemeQt.cpp:
(WebCore::RenderThemeQt::paintMediaSliderTrack):



Canonical link: https://commits.webkit.org/45031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53632 268f45cc-cd09-0410-ab3c-d52691b4dbfc